--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@foursquare/foursquare-places": "^1.0.3",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -34,12 +34,14 @@
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "redux-flipper": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.5",
@@ -50,8 +52,8 @@
     "@types/react": "^18.2.0",
     "@types/react-native": "^0.71.6",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0",
     "hermes-engine": "~0.13.0",
+    "jest": "^29.5.0",
     "jest-expo": "^48.0.2",
     "metro-react-native-babel-preset": "^0.76.3",
     "react-test-renderer": "^18.2.0",
