--- a/packages/mobile/ios/Podfile
+++ b/packages/mobile/ios/Podfile
@@ -1,24 +1,11 @@
+require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
+require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
+
 require 'json'
-
-# Define absolute paths to avoid path resolution issues
-workspace_root = File.expand_path('../../..', __dir__)
-react_native_path = File.join(workspace_root, 'node_modules/react-native')
-expo_path = File.join(workspace_root, 'node_modules/expo')
-
-# Require the scripts using absolute paths
-require File.join(expo_path, 'scripts/autolinking')
-require File.join(react_native_path, 'scripts/react_native_pods')
-
-# Load properties
 podfile_properties = JSON.parse(File.read(File.join(__dir__, 'Podfile.properties.json'))) rescue {}
 
-# Configure environment variables
 ENV['RCT_NEW_ARCH_ENABLED'] = podfile_properties['newArchEnabled'] == 'true' ? '1' : '0'
 ENV['EX_DEV_CLIENT_NETWORK_INSPECTOR'] = podfile_properties['EX_DEV_CLIENT_NETWORK_INSPECTOR']
-# Disable codegen tools explicitly since they're causing issues
-ENV['USE_FABRIC'] = '0'
-ENV['USE_HERMES'] = '0'
-ENV['USE_CODEGEN'] = '0'
 
 platform :ios, podfile_properties['ios.deploymentTarget'] || '13.4'
 install! 'cocoapods',
@@ -29,6 +16,14 @@ prepare_react_native_project!
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...), which will be excluded. To fix this,
 # you can also exclude `react-native-flipper` in `react-native.config.js`
+#
+# ```js
+# module.exports = {
+#   dependencies: {
+#     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
+#   }
+# }
+# ```
 flipper_config = FlipperConfiguration.disabled
 if ENV['NO_FLIPPER'] == '1' then
   # Explicitly disabled through environment variables
@@ -42,26 +37,26 @@ elsif podfile_properties.key?('ios.flipper') then
   end
 end
 
-target 'mobile' do
+target 'RestaurantBucketList' do
   use_expo_modules!
   config = use_native_modules!
 
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
 
-  # We need to explicitly specify our React Native path to avoid resolution issues
   use_react_native!(
-    :path => react_native_path,
-    :hermes_enabled => false,
-    :fabric_enabled => false,
+    :path => config[:reactNativePath],
+    :hermes_enabled => podfile_properties['expo.jsEngine'] == nil || podfile_properties['expo.jsEngine'] == 'hermes',
+    # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/..",
+    # Note that if you have use_frameworks! enabled, Flipper will not work if enabled
     :flipper_configuration => flipper_config
   )
 
   post_install do |installer|
     react_native_post_install(
       installer,
-      react_native_path,
+      config[:reactNativePath],
       :mac_catalyst_enabled => false
     )
 
