--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -13,8 +13,7 @@
     "build": "expo build",
     "clean": "rimraf ./android/build && rimraf ./ios/build",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "patch-package"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@foursquare/foursquare-places": "^1.0.3",
@@ -31,6 +30,7 @@
     "expo-location": "~16.5.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
+    "flipper": "^0.240.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
