--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,15 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
-    "paths": {
-      "@/*": [
-        "packages/src/*"
-      ],
-      "core/*": [
-        "packages/core/src/*"
-      ]
-    },
-    "jsx": "react-native",
-    "strict": true,
-    "moduleResolution": "node",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "isolatedModules": true,
+    "jsx": "react-native",
+    "lib": ["es6"],
+    "moduleResolution": "node",
+    "noEmit": true,
+    "strict": true,
+    "target": "esnext"
   },
-  "include": [
-    "src/**/*.*/*",
-    "packages/**/*.*/*",
-    "src/api/__tests__/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ],
-  "extends": "expo/tsconfig.base"
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
