expo constants fixed

--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -13,6 +13,10 @@
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": ["**/*"],
+    "plugins": [
+      "expo-location",
+      "expo-splash-screen"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.restaurantbucketlist.mobile"
