--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -17,31 +17,29 @@
   },
   "dependencies": {
     "@foursquare/foursquare-places": "^1.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "core": "1.0.0",
+    "core": "file:../core",
     "expo": "~50.0.0",
-    "expo-constants": "^17.1.5",
+    "expo-constants": "~15.4.6",
     "expo-linking": "~6.2.2",
     "expo-location": "~16.5.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
-    "flipper": "^0.240.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-flipper": "^0.273.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^8.0.5",
-    "redux-flipper": "^2.0.3"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.5",
@@ -49,12 +47,12 @@
     "@babel/preset-typescript": "^7.21.5",
     "@babel/runtime": "^7.21.5",
     "@types/jest": "^29.5.1",
-    "@types/react": "^18.2.0",
+    "@types/react": "~18.2.45",
     "@types/react-native": "^0.71.6",
     "babel-jest": "^29.5.0",
     "hermes-engine": "~0.13.0",
     "jest": "^29.5.0",
-    "jest-expo": "^48.0.2",
+    "jest-expo": "~50.0.4",
     "metro-react-native-babel-preset": "^0.76.3",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.0",
