--- a/packages/mobile/app.json
+++ b/packages/mobile/app.json
@@ -30,6 +30,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "FOURSQUARE_API_KEY": "fsq3qBKJqJ2IpGLto+Kqe6ei5IIN6IG/5ty45BfAFK8WCAU=",
+      "FOURSQUARE_CLIENT_ID": "NF3HSWXWJGJKG40YM4BIWELNWHZISLKR4KTYZPB3WSZXAGM0",
+      "FOURSQUARE_CLIENT_SECRET": "NF3HSWXWJGJKG40YM4BIWELNWHZISLKR4KTYZPB3WSZXAGM0",
+      "API_URL": "https://api.foursquare.com/v3"
     }
   }
 }
