--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -2,7 +2,7 @@
   "name": "mobile",
   "version": "1.0.0",
   "description": "React Native mobile app for Restaurant Bucket List",
-  "main": "index.js",
+  "main": "index.ts",
   "private": true,
   "scripts": {
     "start": "expo start --dev-client",
@@ -30,7 +30,6 @@
     "expo-location": "~16.5.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
-    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
