--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "isolatedModules": true,
     "jsx": "react-native",
     "lib": ["es6"],
+    "resolveJsonModule": true,
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
@@ -16,10 +17,5 @@
       "@core/*": ["./packages/core/src/*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "babel.config.js",
-    "metro.config.js",
-    "jest.config.js"
-  ]
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js", "jest.config.js"]
 }
